Update link text for SSMS image

--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@ insights.
                             <div class="flex justify-between items-center">
                                     <span class="text-sm font-semibold text-blue-600">Key Technique: Relational Querying</span>
                                     <a href="https://github.com/Scan93/S.MurtyPortfolio/blob/main/Files/PortfolioActionAdventureShot.png" target="_blank" rel="noopener noreferrer" class="text-sm font-bold text-yellow-600 hover:underline">
-                                        View Image ↗
+                                        View SSMS Image ↗
                                     </a>
                                 </div>
                             </div>
