Fix typo in SQL certification abbreviation

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             <p class="mt-4 max-w-3xl mx-auto text-gray-200">
                 Aspiring Data Analyst and current Data Analytics student. Proven track record of precision in aerospace
 manufacturing, including the development of an automated material inventory system that increased
-tracking accuracy. Certified in Google Data Analytics with proficiency in SQL SMS, Tableau, and Excel. Seeking
+tracking accuracy. Certified in Google Data Analytics with proficiency in SQL SSMS, Tableau, and Excel. Seeking
 to leverage a background in operational logistics and technical problem-solving to deliver data-driven
 insights.
             </p>
