--- a/index.html
+++ b/index.html
@@ -235,6 +235,9 @@ insights.
         <footer class="bg-gray-800 text-white text-center p-8 border-t-4 border-blue-500">
             <p class="text-lg font-light mb-2">Scandal Murty | Data Analyst Portfolio</p>
             <p class="text-gray-400 text-sm">Updated January 2026.</p>
+            <p align="center">
+    <a href="funpage.html">Click here to enter the FUN ZONE!</a>
+</p>
         </footer>
     </div> </body>
 </html>
