Update portfolio theme from 1996 to 90's

--- a/funpage.html
+++ b/funpage.html
@@ -92,7 +92,7 @@
 
     <div class="window">
         <h1 class="header-text">WELCOME TO THE ANALYTICS HUB</h1>
-        <marquee scrollamount="10"><<< INITIALIZING DATA STREAM... SQL CONNECTED... PYTHON READY... WELCOME DATA SURFER SCANDAL! >>></marquee>
+        <marquee scrollamount="10"><<< INITIALIZING DATA STREAM... SQL CONNECTED... PYTHON READY... WELCOME DATA SURFER ! >>></marquee>
     </div>
 
     <hr>
@@ -101,7 +101,7 @@
         <tr>
             <td>
                 <h2 style="color: #00FFFF;">New Updates!</h2>
-                <p>Welcome to my 1996-themed portfolio. Currently exploring the deep web of data analytics.</p>
+                <p>Welcome to my 90's-themed portfolio. Currently exploring the deep web of data analytics.</p>
                 
                 <div style="border: 2px dashed #00FF00; padding: 10px; margin: 10px 0;">
                     <span class="blink">NEW!</span> I just learned how to decode Base64 strings using logic!
