Update and rename funpage.html to analyticshub.html

--- a/analyticshub.html
+++ b/analyticshub.html
@@ -134,7 +134,7 @@
                 <hr style="height: 2px;">
                 
                 <div align="center">
-                    <p>VISITORS SINCE 1996:</p>
+                    <p>VISITORS SINCE PAGE IMPLEMENTATION:</p>
                     <div class="visitor-counter">0000000</div>
                 </div>
             </td>
