Update visitor counter div with an ID

--- a/analyticshub.html
+++ b/analyticshub.html
@@ -135,7 +135,7 @@
                 
                 <div align="center">
                     <p>VISITORS SINCE PAGE IMPLEMENTATION:</p>
-                    <div class="visitor-counter">0000000</div>
+                    <div class="visitor-counter" id="count">0000000</div>
                 </div>
             </td>
         </tr>
