--- a/index.html
+++ b/index.html
@@ -236,7 +236,7 @@ insights.
             <p class="text-lg font-light mb-2">Scandal Murty | Data Analyst Portfolio</p>
             <p class="text-gray-400 text-sm">Updated February 2026.</p>
             <p align="center">
-    <a href="analyticshub.html">Click here to enter my Analytics HUB!</a>
+    <a href="analyticshub.html">Enter the HUB!</a>
 </p>
         </footer>
     </div> </body>
