--- a/analyticshub.html
+++ b/analyticshub.html
@@ -134,8 +134,8 @@
                 <hr style="height: 2px;">
                 
                 <div align="center">
-                    <p>VISITORS SINCE PAGE IMPLEMENTATION:</p>
-                    <div class="visitor-counter" id="count">0000000</div>
+                    <p>VISITORS SINCE IMPLEMENTATION:</p>
+                    <img src="https://hits.seeyoufarm.com/api/count/incr/badge.svg?url=https%3A%2F%2Fscandalmurty.github.io%2Fanalyticshub.html&count_bg=%23FF0000&title_bg=%23555555&icon=&icon_color=%23E7E7E7&title=HITS&edge_flat=false" alt="Hits">
                 </div>
             </td>
         </tr>
@@ -150,25 +150,6 @@
             <img src="https://web.archive.org/web/20091027044549im_/http://geocities.com/Athens/Acropolis/1381/ie_logo.gif" alt="IE">
         </p>
     </div>
-
-    <script>
-    async function getCounter() {
-        const namespace = "scandal-analytics-hub-2026"; 
-        const url = `https://api.countapi.xyz/hit/${namespace}/visits`;
-
-        try {
-            const response = await fetch(url);
-            if (!response.ok) throw new Error('Network issue');
-            const data = await response.json();
-            
-            document.getElementById('count').innerText = data.value.toString().padStart(7, '0');
-        } catch (error) {
-            console.log("Counter service unavailable. Displaying default.");
-            document.getElementById('count').innerText = "0001996";
-        }
-    }
-    getCounter();
-    </script>
 
 </body>
 </html>
