--- a/analyticshub.html
+++ b/analyticshub.html
@@ -134,7 +134,7 @@
                 <hr style="height: 2px;">
                 
                 <div align="center">
-                    <p>VISITORS SINCE IMPLEMENTATION:</p>
+                    <p style="color: #FFFF00; font-size: 0.8em;">VISITORS SINCE IMPLEMENTATION:</p>
                     <img src="https://hits.seeyoufarm.com/api/count/incr/badge.svg?url=https%3A%2F%2Fscandalmurty.github.io%2Fanalyticshub.html&count_bg=%23FF0000&title_bg=%23555555&icon=&icon_color=%23E7E7E7&title=HITS&edge_flat=false" alt="Hits">
                 </div>
             </td>
