Fix image source for under construction message

--- a/analyticshub.html
+++ b/analyticshub.html
@@ -116,7 +116,7 @@
                 </div>
 
                 <p align="center">
-                    <img src="photos/underconstruction.png" alt="Under Construction>
+                    <img src="#" alt="Under Construction">
                     <br>
                     <i>This page is always under construction!</i>
                 </p>
