Update under construction image source

--- a/analyticshub.html
+++ b/analyticshub.html
@@ -116,7 +116,7 @@
                 </div>
 
                 <p align="center">
-                    <img src="#" alt="Under Construction">
+                    <img src="https://web.archive.org/web/20091027005003im_/http://geocities.com/Tokyo/6618/undercon.gif" alt="Under Construction">
                     <br>
                     <i>This page is always under construction!</i>
                 </p>
