Update title and description for Data Analyst role

--- a/index.html
+++ b/index.html
@@ -37,9 +37,9 @@
             </div>
             
             <h1 class="text-5xl font-extrabold mb-1">SCANDAL MURTY</h1>
-            <h2 class="text-xl font-light text-blue-300">Aspiring Data Analyst | Operational & Logistical Mindset</h2>
+            <h2 class="text-xl font-light text-blue-300">Data Analyst | Operational & Logistical Mindset</h2>
             <p class="mt-4 max-w-3xl mx-auto text-gray-200">
-                Aspiring Data Analyst and current Data Analytics student. Proven track record of precision in aerospace
+            Data Analyst and current Data Analytics student. Proven track record of precision in aerospace
 manufacturing, including the development of an automated material inventory system that increased
 tracking accuracy. Certified in Google Data Analytics with proficiency in SQL SSMS, Tableau, and Excel. Seeking
 to leverage a background in operational logistics and technical problem-solving to deliver data-driven
