--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -236,10 +235,17 @@ nav {
 .photo-ring {
   width: 230px; height: 230px;
   border-radius: 50%;
-  padding: 3px;
+  position: relative;
+  flex-shrink: 0;
+}
+.photo-ring::before {
+  content: '';
+  position: absolute;
+  inset: -3px;
+  border-radius: 50%;
   background: conic-gradient(var(--accent), var(--accent2), #0d0f14 50%, var(--accent));
   animation: spin 6s linear infinite;
-  flex-shrink: 0;
+  z-index: 0;
 }
 @keyframes spin { to { transform: rotate(360deg); } }
 .photo-inner {
@@ -247,11 +253,13 @@ nav {
   border-radius: 50%;
   overflow: hidden;
   background: var(--surface);
+  position: relative;
+  z-index: 1;
 }
 .photo-inner img {
   width: 100%; height: 100%;
   object-fit: cover;
-  object-position: center top;
+  object-position: center 50%;
   border-radius: 50%;
 }
 .hero-links {
