Revise job responsibilities and achievements in index.html
Updated job experience details for clarity and impact.

--- a/index.html
+++ b/index.html
@@ -752,9 +752,10 @@ footer {
           <div class="exp-role">Senior Production Operator</div>
           <div class="exp-company">General Dynamics Mission Systems</div>
           <ul class="exp-bullets">
-            <li>Achieved 100% compliance with quality standards in bonding and laminating PWBs for space missions — zero defects across all audits.</li>
-            <li>Built an automated material inventory system that directly increased tracking accuracy and reduced manual logging time.</li>
-            <li>Used Solumina daily to review schematics, manage work instructions, and track components — hands-on data pipeline management at scale.</li>
+            <li>Bonded 800+ PWBs and electronic components, contributing to the highest quality of life-critical space hardware.</li>
+            <li>Maintained 99.8% quality compliance across all components to ensure safety standards are met.</li>
+            <li>Created an automated material inventory system to increase accuracy by 25% and save 4 hours a week of manual tracking time.</li>
+            <li>Helped mechanical engineering with design schematics and integration to reduce assembly rework by 15%.</li>
           </ul>
           <div class="exp-highlight">⭐ Key project: Automated Inventory System</div>
         </div>
@@ -765,7 +766,18 @@ footer {
           <div class="exp-role">Inbound Associate</div>
           <div class="exp-company">Target</div>
           <ul class="exp-bullets">
-            <li>Managed merchandise flow, inventory organization, and accurate stock tracking in a high-volume retail environment.</li>
+            <li>Unloaded and sorted 2000+ units per shift from merchandise trailers efficiently in a team setting.</li>
+            <li>Stocked and organized new merchandise to ensure 98% inventory accuracy and floor-ready presentation.</li>
+          </ul>
+        </div>
+      </div>
+      <div class="exp-item">
+        <div class="exp-dates">NOV 2021<br>- JUN 2022</div>
+        <div>
+          <div class="exp-role">Top Earning Delivery Driver</div>
+          <div class="exp-company">Domino's</div>
+          <ul class="exp-bullets">
+            <li>Achieved #1 delivery driver ranking in the 85242 area by completing 25+ deliveries per shift using optimized routing strategies, contributing to $3,750 in weekly net-revenue.</li>
           </ul>
         </div>
       </div>
