Update job responsibilities for Supervisor role

--- a/index.html
+++ b/index.html
@@ -787,7 +787,9 @@ footer {
           <div class="exp-role">Supervisor</div>
           <div class="exp-company">Hertz 76</div>
           <ul class="exp-bullets">
-            <li>Led onboarding and training of all new hires. Managed chemical and supply inventory reporting, and delivered customer service operations across the fuel and carwash facility.</li>
+            <li>Trained 20+ new hires in service protocols, safety compliance, and operational procedures.</li>
+            <li>Delivered exceptional customer service to 250+ daily patrons using point-of-sale systems and upselling techniques and increasing an average weekly transaction value increase of 15%</li>
+            <li>Managed the carwash chemical inventory, parts sourcing, and equipment repairs and preventative maintenance scheduling, reducing downtime by 20%.</li>
           </ul>
         </div>
       </div>
